--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,8 +26,9 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
     </div>
 
     <nav
+      inert
       id="header-nav"
-      class="relative overflow-hidden transition-all duration-500 ease-in-out"
+      class="grid relative overflow-hidden transition-all duration-500 ease-in-out"
     >
       <div id="nav-content" class="relative pt-[2px]">
         <ul
