--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import backgroundDesk from "../assets/images/hero-bg-desk.webp";
   >
     <section
       id="hero"
-      class="wrapper min-h-svh pt-27 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
+      class="wrapper min-h-dvh pt-27 pb-2 gap-[min(21svw,80px)] justify-between flex flex-col-reverse w-full relative md:pt-5"
     >
       <h1
         data-fade-animation
