--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,8 +5,7 @@ import { Font } from "astro:assets";
 import Header from "../components/Header.astro";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const isAllowed =
-  import.meta.env.PROD && Astro.site && Astro.url.origin === Astro.site.origin;
+const enableAnalytics = import.meta.env.PUBLIC_ENABLE_ANALYTICS === "true";
 
 const title = "Ivan Pozdnovskii | Web Developer";
 const description =
@@ -32,13 +31,15 @@ const description =
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content="/opengraph.webp" />
     <link rel="canonical" href={canonicalURL} />
-    {
+    <!-- {
       (isAllowed && <meta name="robots" content="index, follow" />) || (
         <meta name="robots" content="noindex, nofollow" />
       )
-    }
+    } -->
+    <meta name="robots" content="noindex, nofollow" />
+
     {
-      isAllowed && (
+      enableAnalytics && (
         <script
           defer
           src="https://cloud.umami.is/script.js"
@@ -47,20 +48,11 @@ const description =
       )
     }
 
-    {isAllowed && <script>console.log('isProduction')</script>}
-    {!isAllowed && <script>console.log('NotisProduction')</script>}
-
     <!-- <meta name="view-transition" content="same-origin" /> -->
     <Font cssVariable="--font-space-grotesk" preload />
     <Font cssVariable="--font-space-mono" preload />
   </head>
   <body class="bg-zinc-800 text-white">
-    <div
-      style="display:none"
-      data-debug-host={Astro.url.hostname}
-      data-debug-site={Astro.site?.hostname}
-    >
-    </div>
     <Header />
     <slot />
     <script is:inline>
