--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,14 +35,13 @@
     height: 100%;
   }
 
-  html {
-    /* @apply scroll-smooth scroll-pt-[calc(var(--spacing-section)*1.5)]; */
-    @apply scroll-smooth scroll-pt-section-sm;
-  }
-
   body {
     scrollbar-gutter: stable both-edges;
     font-family: var(--font-body);
+  }
+
+  #main > section {
+    @apply scroll-mt-section;
   }
 
   h1 {
@@ -59,12 +58,28 @@
 }
 
 @layer components {
-  /* body:has(dialog[open]) {
-    overflow: hidden;
-  } */
-
   #contacts {
-    @apply relative top-[var(--spacing-section-sm)];
+    @apply mt-[var(--spacing-section-sm)];
+  }
+
+  @media (prefers-reduced-motion: no-preference) {
+    html {
+      scroll-behavior: smooth;
+    }
+
+    [data-fade-animation] {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeUp 0.6s ease forwards;
+      animation-delay: calc(var(--fade-index) * 0.2s);
+    }
+
+    @keyframes fadeUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   }
 
   @media (min-width: 48rem) {
@@ -74,53 +89,6 @@
 
     .grid-wrapper__center-cell {
       @apply col-start-2 col-end-3;
-    }
-  }
-
-  .pipe {
-    animation: fadeIn 0.5s ease-in-out 3 alternate;
-  }
-
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-
-    100% {
-      opacity: 1;
-    }
-  }
-
-  /* h1 span:not(:last-child) {
-    display: inline-block;
-    width: 0;
-    overflow: hidden;
-    transform-origin: left;
-    animation: type 0.5s ease calc(var(--item-index) * 1s) forwards;
-    text-indent: 0;
-  }
-
-  @keyframes type {
-    0% {
-      width: 0;
-    }
-
-    100% {
-      width: fit-content;
-    }
-  } */
-
-  [data-fade-animation] {
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeUp 0.6s ease forwards;
-    animation-delay: calc(var(--fade-index) * 0.2s);
-  }
-
-  @keyframes fadeUp {
-    to {
-      opacity: 1;
-      transform: translateY(0);
     }
   }
 }
