--- a/src/components/UI/Section.astro
+++ b/src/components/UI/Section.astro
@@ -1,5 +1,5 @@
 ---
-import SectionHeading from "./SectionHeading.astro";
+import SectionHeading from "@components/UI/SectionHeading.astro";
 
 const { id, title, class: className = "" } = Astro.props;
 ---
