--- a/src/components/sections/ServicesSection/ServiceCard.astro
+++ b/src/components/sections/ServicesSection/ServiceCard.astro
@@ -1,6 +1,6 @@
 ---
 const { title, index } = Astro.props;
-import Sdf from "../assets/images/sdf.svg";
+import Sdf from "@images/sdf.svg";
 ---
 
 <article
