--- a/src/components/sections/ServicesSection/ServicesSection.astro
+++ b/src/components/sections/ServicesSection/ServicesSection.astro
@@ -1,6 +1,6 @@
 ---
 import ServiceCard from "@components/sections/ServicesSection/ServiceCard.astro";
-import SocilaLinksList from "@components/UI/SocilaLinksList.astro";
+import SocialLinksList from "@components/UI/SocialLinksList.astro";
 import Section from "@components/UI/Section.astro";
 ---
 
@@ -46,7 +46,7 @@ import Section from "@components/UI/Section.astro";
         class="grid-wrapper__center-cell flex flex-wrap justify-between items-center gap-x-6 indent-0 max-w-prose mt-6"
       >
         <p>Designer? <span class="heading-mono"> Let's collaborate →</span></p>
-        <address><SocilaLinksList /></address>
+        <address><SocialLinksList /></address>
       </aside>
     </ServiceCard>
   </main>
