--- a/src/components/UI/SocialLink.astro
+++ b/src/components/UI/SocialLink.astro
@@ -9,6 +9,7 @@ const { href, ariaLabel, Icon, dataUmamiEvent } = Astro.props;
     href={href}
     aria-label={ariaLabel}
     target="_blank"
+    rel="noopener noreferrer"
     class="w-[clamp(45px,2.5em,78px)] aspect-square flex justify-center items-center *:rounded-[6px] hover:*:w-3/4"
     ><Icon class="w-3/5 aspect-square transition-all" fill="currentColor" /></a
   >
