--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -2,14 +2,14 @@
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="Page not found | Ivan Pozdnovskii" noindex>
+<Layout title="Server Error | Ivan Pozdnovskii" noindex>
   <main
     id="main"
     class="wrapper min-h-dvh relative flex flex-col justify-center items-center text-center text-balance"
   >
-    <h1 class="text-xl mb-2">Page not found</h1>
+    <h1 class="text-xl mb-2">Server Error</h1>
     <p class="mb-5">
-      Looks like the address <code>{Astro.url.pathname}</code> doesn't exist.
+      Something went wrong on our end. Please try again later.
     </p>
     <a class="block border border-current rounded-md py-2 px-4" href="/"
       >Go back to the homepage</a
