--- a/src/components/UI/SocialLinksList.astro
+++ b/src/components/UI/SocialLinksList.astro
@@ -52,7 +52,7 @@ const dataUmamiEvent =
   />
   <SocialLink
     dataUmamiEvent={dataUmamiEvent}
-    href="mailto:ipozdnovskii@icloud.com"
+    href="mailto:ivan@weblateweb.dev"
     ariaLabel="Email me"
     Icon={EmailLogo}
     fill="#000"
