--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import ServicesSection from "@components/sections/ServicesSection/ServicesSectio
 import HowToSection from "@components/sections/HowToSection.astro";
 import ToolsSection from "@components/sections/ToolsSection/ToolsSection.astro";
 import ProjectsSection from "@components/sections/ProjectsSection.astro";
+import Footer from "@components/sections/Footer.astro";
 
 import backgroundDesk from "@images/hero-bg-desk.webp";
 ---
@@ -86,4 +87,5 @@ import backgroundDesk from "@images/hero-bg-desk.webp";
 
     <ProjectsSection />
   </main>
+  <Footer />
 </Layout>
