--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "@styles/header.css";
 @import "@styles/projects.css";
+@import "@styles/footer.css";
 
 @theme {
   --font-body: var(--font-space-grotesk);
